Fix layout and prevent overflows

--- a/style.css
+++ b/style.css
@@ -9,4 +9,9 @@ html {
     min-height: 100vh;
     width: 100vw;
     background-image: linear-gradient(to right, red , yellow);
+    box-sizing: border-box;
+}
+#table1 {
+    width: 100%;
+    border: 2px solid black;
 }
